fix header spacing

--- a/stylesheets/frameless.scss
+++ b/stylesheets/frameless.scss
@@ -98,7 +98,7 @@ article, aside, figure, footer, header, hgroup, menu, nav, section {
 	margin: 0;
 	padding: 0;
 	border: 0;
-    font-size: 100%;
+    font-size: 1em;
     text-decoration: none;
     font-weight: normal;
     color:inherit;
@@ -129,8 +129,7 @@ body {
 }
 
 #contact h1 {
-    font-size: 3rem;
-    text-align: left;
+    font-size: 1.5rem;
     line-height: 1em;
     padding-bottom: .3em;
 }
@@ -212,7 +211,7 @@ body {
 .post h1,
 .resume h1 {
     @include preview;
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-bottom: .3rem;
 }
 
@@ -235,7 +234,8 @@ body {
 .idyll-text-container h3,
 .resume dt {
     @include preview;
-    font-size: 1rem;
+    font-size: 0.8rem;
+    text-align: left;
 }
 
 .postpreview time, .postpreview-title {
